test/visibility/submodule-in-file/errors/MissingSubModule.chpl
module MissingSubModule {
  include module MissingSubModule;
}
