test/visibility/submodule-in-file/errors/MissingSubModule.good
MissingSubModule.chpl:2: error: cannot find included submodule
MissingSubModule.chpl:2: note: expected file at path 'MissingSubModule/MissingSubModule.chpl'
